--- a/weatherapp/templates/index.html
+++ b/weatherapp/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>Weather Detactor</title>
+    <title>Weather Detector</title>
     <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
